<resources>
    <string name="app_name">RFID manager</string>
    <string name="database_name">"rfid-db"</string>
    <!--usually used-->
    <string name="OK">Ok</string>
    <string name="Cancel">Cancel</string>

    <!--Five buttons above the main page-->
    <string name="home_b">Home</string>
    <string name="edit_b">Edit</string>
    <string name="delete_b">Delete</string>
    <string name="add_b">Add</string>
    <string name="setting_b">Setting</string>

    <!--login UI-->
    <string name="input_user_name">Input username here</string>
    <string name="input_new_password">Input new password here</string>
    <string name="input_password_again">Input your password again</string>
    <string name="no_password_required_this_time">No password is required at this time.</string>
    <string name="do_not_show_this_again">Do not show this message again.</string>
    <string name="welcome">Welcome to RFID system.</string>
    <string name="password_input_reminder">Please, set up your password. This password will be necessary in order to log into your RFID system.</string>
    <string name="password_saved">Username and password saved!</string>
    <string name="password_omitted">Password omitted!</string>
    <string name="empty_username_warning">The username should not be empty!</string>
    <string name="empty_password_warning">The password should not be empty!</string>
    <string name="login_fail">Login failed! Wrong password! Please retry!</string>
    <string name="diff_passwd">Two passwords are not consistent, please retry.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <!--Change Password-->
    <string name="change_passwd">Changing Password</string>
    <string name="wrong_old_password">Please input correct current password</string>
    <string name="password_updated">Your password has updated successfully.</string>

    <!--Main Page-->
    <string name="exit_warning">Do you really want exit?</string>
    <string name="delete_confirm_title"> will be deleted permanently</string>
    <string name="delete_confirm"> Are you sure you want to delete it permanently?</string>
    <string name="delete_success">Delete successful</string>
    <string name="change_power">Changing Power</string>

    <!--Add Page-->
    <string name="dialog_title_edit_key_des">Edit key description</string>
    <string name="dialog_title_add_key_des">Add key description</string>
    <string name="no_access">Permission derail!</string>
    <string name="detail_description">Detail description:</string>
    <string name="no_images_available">No images available</string>
    <string name="saved_item">item saved.</string>
    <string name="delete">X</string>
    <string name="image_regexp">.*\\.jpg|jpeg|gif|png$</string>
    <string name="backup_success">Backup Successful!</string>
    <string name="import_success">Import Successful!</string>
    <string name="add_key_description">ADD KEY DESCRIPTION</string>
    <string name="items_name">Items Name</string>
    <string name="add_more_images">Add more Images</string>
    <string name="description">Description...</string>
    <string name="price">Price</string>

    <!--Setting Page-->
    <string name="select_backup_position">Select a location to backup</string>
    <string name="select_restore_position">Select a backup position to restore</string>
    <string name="backup_successful">Your database has been successfully loaded into</string>
    <string name="backup_internal_successful">Your database has been successfully loaded into internal storage.</string>
    <string name="restore_successful">Your database has been successfully restored.</string>
    <string name="restore_failed">Restore failed.</string>
    <string name="backup_failed">Backup failed.</string>
    <string name="tf_ncard">External\nStorage</string>
    <string name="internal_nmemory">Internal\nStorage</string>
    <string name="restore_warning">The restore database will be loaded into your RFID system, the current data will be lost without backup. </string>
    <string name="no_backup_File_TF">There are no backup file on external card.</string>
    <string name="no_backup_File_data">There are no backup file on internal storage.</string>
    <string name="username_exist">The username is exist.</string>
    <string name="user_not_exist">User name not exist.</string>
    <string name="illegal_user">Illegal user, please sign up again.</string>
    <string name="no_select_item">No item be selected.</string>
    <string name="change_apperance">Change Appearance</string>
    <string name="apperance_updated">Appearance updated!</string>
    <string name="one_row_nlayout">One Row\nLayout</string>
    <string name="detail_layout">Detail\nLayout</string>
    <string name="staggered_nlayout">Staggered\nLayout</string>
    <string name="linear_nlayout">Linear\nLayout</string>
    <string name="select_an_appearance">Select an appearance to change:</string>
    <string name="setting">Setting</string>
    <string name="backup_database">Backup Database</string>
    <string name="restore_database">Restore Database</string>
    <string name="change_password">Change Password</string>
    <string name="change_rfid_range">Change RFID Range</string>
    <string name="detail_page">Detail Page</string>
    <string name="edit_page">Edit Page</string>
    <string name="add_new_item_explain">Add new item</string>
    <string name="log_out">Log out</string>
    <string name="grant_permission_warning">Do not have access to read USB device, please grant permission.</string>
    <string name="current_selection_line">Current selection: Linear Layout</string>
    <string name="current_selection_staggered">Current selection: Staggered Layout</string>
    <string name="current_selection_one_row">Current selection: One Row Layout</string>
    <string name="select_at_least_one_item">Please select at least one storage.</string>
    <string name="internal_sd_card">Primary Storage</string>
    <string name="external_sd_card">Secondary Storage</string>
    <string name="no_usb_permission">Do not have access to read USB device, please grant permission.</string>
    <string name="one_ID_multi_items_warning">There are more than one items with one ID.</string>
    <string name="another_users_card">This card already bind with another user.</string>
    <string name="item_not_exist">Item do not exist.</string>
    <string name="save_item_failed">Save item failed.</string>
    <string name="item_have_not_added">The item is not exist!</string>
    <string name="current_selection_detail_layout">Current selection: Detail Layout</string>
    <string name="inventory_empty_hint">Please put RFID cards close to the card reader.</string>
    <string name="no_items_recorded">No items recorded in database.</string>
    <string name="show_all_items_explain">show all items</string>
    <string name="all_items_actionbar_title">Collection</string>
    <string name="item_number">Available Items:</string>
    <string name="available_inventory">Stock</string>
    <string name="no_key_description_information">No key description</string>
    <string name="done">done</string>
    <string name="statistic">statistic</string>

    <string name="year_label">year</string>
    <string name="month_label">month</string>
    <string name="day_label">day</string>
    <string name="checkout_successful">checkout successful</string>

    <!--Others-->

</resources>
