<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true">

            <Button
                android:id="@+id/change_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_apperance"
                android:textAllCaps="false"
                android:layout_margin="10dp"
                style="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:id="@+id/backup_database_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/backup_database"
                android:textAllCaps="false"
                android:layout_margin="10dp"
                style="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:id="@+id/restore_database_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restore_database"
                android:textAllCaps="false"
                android:layout_margin="10dp"
                style="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:id="@+id/change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textAllCaps="false"
                android:layout_margin="10dp"
                style="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:id="@+id/change_rfid_range"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_rfid_range"
                android:textAllCaps="false"
                android:layout_margin="10dp"
                style="@style/Widget.AppCompat.Button.Colored" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>
